--- a/style.css
+++ b/style.css
@@ -251,6 +251,105 @@ body {
   cursor: pointer;
 }
 
+.container.active {
+  filter: contrast(0);
+}
+
+
+/* ######################## POP-UP ######################## */
+
+.pop-up-display {
+  display: none;
+}
+
+.pop-up {
+  position: absolute;
+  /* Layout Properties */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 380px;
+  height: 305px;
+  /* UI Properties */
+  background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 12px;
+  opacity: 1;
+  border: 1px solid #ECEDF2;
+}
+
+.pop-up-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.pop-up-header img {
+  /* Layout Properties */
+  top: 280px;
+  left: 588px;
+  width: 104px;
+  height: 121px;
+  /* UI Properties */
+  background: transparent url('img/Welcome.png') 0% 0% no-repeat padding-box;
+  opacity: 1;
+  margin-top: 30px;
+}
+
+
+.close-button {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  cursor: pointer;
+  border-radius: 50%;
+  background: var(--unnamed-color-ecedf2) 0% 0% no-repeat padding-box;
+  background: #ECEDF2 0% 0% no-repeat padding-box;
+  opacity: 1;
+  color: var(--unnamed-color-1e1f22);
+  border: none;
+}
+
+.pop-up-body h2 {
+  /* Layout Properties */
+  top: 411px;
+  left: 582px;
+  height: 28px;
+  /* UI Properties */
+  color: var(--unnamed-color-1e1f22);
+  text-align: center;
+  letter-spacing: 0px;
+  color: #1E1F22;
+  opacity: 1;
+  margin: 16px;
+}
+
+.pop-up-body p {
+  /* Layout Properties */
+  top: 450px;
+  left: 486px;
+  width: 308px;
+  height: 67px;
+  /* UI Properties */
+  text-align: center;
+  letter-spacing: 0px;
+  color: #828691;
+  opacity: 1;
+  font-weight: 200;
+}
+
+
+
+
+/* ######################## RESPONSIVE ######################## */
+
+
 
 @media screen and (max-width: 970px) {
 
@@ -270,9 +369,6 @@ body {
     margin-top: 64px;
     margin-left: 64px;
     flex-wrap: wrap;
-  }
-
-  .main-bloc h1 {
   }
 
   .name {
